--- a/agent/Vagrantfile
+++ b/agent/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 #DILOPEZ
-#This virtual machine provisions puppet machines.
+#Provisioning is provided by Ansible from its VM.
 
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "ubuntu/focal64"
-	config.vm.hostname = "dev"
+	config.vm.hostname = "dilopezagent"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -67,9 +67,24 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-	config.vm.provision "file", source:~/.ssh/id_rsa.pub, destination:/home/vagrant/.ssh/id_rsa.pub
-	config.vm.provision "file", source:~/.ssh/id_rsa, destination:/home/vagrant/.ssh/id_rsa
+	config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination:"/home/vagrant/.ssh/id_rsa.pub"
+	config.vm.provision "file", source: "~/.ssh/id_rsa", destination:"/home/vagrant/.ssh/id_rsa"
   config.vm.provision "shell", inline: <<-SHELL
 		cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+		apt update
+		apt upgrade -y
+		apt install -y build-essential openjdk-11-jdk wget vim git net-tools iptables
+		# PUPPET
+		# https://puppet.com/docs/puppet/7/install_agents.html
+		wget https://apt.puppet.com/puppet7-release-focal.deb
+		dpkg -i puppet7-release-focal.deb
+		apt update
+		apt install -y puppet-agent
+		source /etc/profile.d/puppet-agent.sh
+		export PATH=/opt/puppetlabs/bin:$PATH
+		puppet config set server dilopezmaster --section main
+		puppet ssl bootstrap
+	SHELL
+end
   SHELL
 end
