--- a/tools/Vagrantfile
+++ b/tools/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 #DILOPEZ
-#Provisioning is provided by Ansible from its VM.
+#This virtual machine provisions puppet machines.
 
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "ubuntu/focal64"
-	config.vm.hostname = "puppetagent"
+	config.vm.hostname = "dilopezmaster"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -67,9 +67,27 @@ Vagrant.configure("2") do |config|
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
-	config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination:"/home/vagrant/.ssh/id_rsa.pub"
-	config.vm.provision "file", source: "~/.ssh/id_rsa", destination:"/home/vagrant/.ssh/id_rsa"
+	config.vm.provision "file", source: "./toolkit", destination: "/home/vagrant/toolkit"
+	config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "/home/vagrant/.ssh/id_rsa.pub"
+	config.vm.provision "file", source: "~/.ssh/id_rsa", destination: "/home/vagrant/.ssh/id_rsa"
   config.vm.provision "shell", inline: <<-SHELL
 		cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
-  SHELL
+		apt update
+		apt upgrade -y
+		apt install -y build-essential openjdk-11-jdk wget vim git net-tools iptables ansible
+		# ANSIBLE
+		cp /home/vagrant/toolkit/ansible/ansible.cfg /etc/ansible/ansible.cfg
+		# PUPPET
+		# https://puppet.com/docs/puppet/7/server/install_from_packages.html
+		wget https://apt.puppet.com/puppet7-release-focal.deb
+		dpkg -i puppet7-release-focal.deb
+		cat /home/vagrant/toolkit/puppet.conf >> /etc/puppetlabs/puppet/puppet.conf 
+		service puppetserver enable
+		service puppetserver start
+		# R10K
+		export PATH=$PATH:/opt/puppetlabs/bin
+		gem install r10k
+		mkdir /etc/puppetlabs/r10k
+		cp /home/vagrant/toolkit/r10k.yaml /etc/puppetlabs/r10k/r10k.yaml
+	SHELL
 end
