--- a/master/Vagrantfile
+++ b/master/Vagrantfile
@@ -72,6 +72,7 @@ Vagrant.configure("2") do |config|
 	config.vm.provision "file", source: "~/.ssh/id_rsa", destination: "/home/vagrant/.ssh/id_rsa"
   config.vm.provision "shell", inline: <<-SHELL
 		cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
+		chmod 600 -R /home/vagrant/.ssh/
 		apt update
 		apt upgrade -y
 		apt install -y build-essential openjdk-11-jdk wget vim git net-tools iptables ansible
