--- a/master/Vagrantfile
+++ b/master/Vagrantfile
@@ -68,11 +68,7 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
 	config.vm.provision "file", source: "./toolkit", destination: "/home/vagrant/toolkit"
-	config.vm.provision "file", source: "~/.ssh/id_rsa.pub", destination: "/home/vagrant/.ssh/id_rsa.pub"
-	config.vm.provision "file", source: "~/.ssh/id_rsa", destination: "/home/vagrant/.ssh/id_rsa"
   config.vm.provision "shell", inline: <<-SHELL
-		cat /home/vagrant/.ssh/id_rsa.pub >> /home/vagrant/.ssh/authorized_keys
-		chmod 600 -R /home/vagrant/.ssh/
 		apt update
 		apt upgrade -y
 		apt install -y build-essential openjdk-11-jdk wget vim git net-tools iptables ansible
@@ -82,10 +78,12 @@ Vagrant.configure("2") do |config|
 		# https://puppet.com/docs/puppet/7/server/install_from_packages.html
 		wget https://apt.puppet.com/puppet7-release-focal.deb
 		dpkg -i puppet7-release-focal.deb
+		apt-get install puppetserver
 		cat /home/vagrant/toolkit/puppet.conf >> /etc/puppetlabs/puppet/puppet.conf 
-		service puppetserver enable
-		service puppetserver start
+		sudo service puppetserver enable 
+		sudo service puppetserver start
 		# R10K
+		sed '/mesg/i PATH=$PATH:/opt/puppetlabs/bin' /root/.profile;
 		export PATH=$PATH:/opt/puppetlabs/bin
 		gem install r10k
 		mkdir /etc/puppetlabs/r10k
