--- a/master/Vagrantfile
+++ b/master/Vagrantfile
@@ -48,18 +48,19 @@ Vagrant.configure("2") do |config|
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
   # config.vm.synced_folder "../data", "/vagrant_data"
+	config.vm.synced_folder '.', '/vagrant', disabled: true
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
   # Example for VirtualBox:
   #
-  # config.vm.provider "virtualbox" do |vb|
+ config.vm.provider "virtualbox" do |vb|
   #   # Display the VirtualBox GUI when booting the machine
   #   vb.gui = true
   #
   #   # Customize the amount of memory on the VM:
-  #   vb.memory = "1024"
-  # end
+     vb.memory = "2048"
+  end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
@@ -71,20 +72,27 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
 		apt update
 		apt upgrade -y
-		apt install -y build-essential openjdk-11-jdk wget vim git net-tools iptables ansible
+		apt install -y build-essential sed openjdk-11-jdk wget vim git net-tools iptables ansible
 		# ANSIBLE
 		cp /home/vagrant/toolkit/ansible/ansible.cfg /etc/ansible/ansible.cfg
 		# PUPPET
 		# https://puppet.com/docs/puppet/7/server/install_from_packages.html
 		wget https://apt.puppet.com/puppet7-release-focal.deb
 		dpkg -i puppet7-release-focal.deb
-		apt-get install puppetserver
+		apt update
+		apt-get install -y puppetserver
 		cat /home/vagrant/toolkit/puppet.conf >> /etc/puppetlabs/puppet/puppet.conf 
-		sudo service puppetserver enable 
-		sudo service puppetserver start
+		sed -i 's/Xms2g/Xms256m/g' /etc/default/puppetserver
+		sed -i 's/Xmx2g/Xmx1g/g' /etc/default/puppetserver
+		systemctl start puppetserver
+		systemctl enable puppetserver
 		# R10K
-		sed '/mesg/i PATH=$PATH:/opt/puppetlabs/bin' /root/.profile;
-		export PATH=$PATH:/opt/puppetlabs/bin
+		echo "PATH=$PATH:/opt/puppetlabs/puppet/bin" >> /home/vagrant/.profile
+		echo "PATH=$PATH:$HOME/bin" >> /home/vagrant/.profile
+		source /home/vagrant/.profile	
+		sed -i '/mesg/i PATH=$PATH:/opt/puppetlabs/puppet/bin' /root/.profile
+		sed -i '/mesg/i PATH=$PATH:$HOME/bin' /root/.profile
+		source /root/.profile	
 		gem install r10k
 		mkdir /etc/puppetlabs/r10k
 		cp /home/vagrant/toolkit/r10k.yaml /etc/puppetlabs/r10k/r10k.yaml
