--- a/toolkit/puppet/puppetserver.conf
+++ b/toolkit/puppet/puppetserver.conf
@@ -10,8 +10,8 @@ logdir = /var/log/puppetlabs/puppetserver
 rundir = /var/run/puppetlabs/puppetserver
 pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
 codedir = /etc/puppetlabs/code
-#server = dilopezmaster
-#dns_alt_names = dilopezmaster
-[main]
-server = dilopezmaster
+server = {{fqdn}}
+dns_alt_names = dilopezmaster
+[agent]
+server = {{fqdn}}
 dns_alt_names = dilopezmaster
