--- a/toolkit/puppet/puppetagent.conf
+++ b/toolkit/puppet/puppetagent.conf
@@ -10,8 +10,8 @@ logdir = /var/log/puppetlabs/puppetserver
 rundir = /var/run/puppetlabs/puppetserver
 pidfile = /var/run/puppetlabs/puppetserver/puppetserver.pid
 codedir = /etc/puppetlabs/code
-#server = {{fqdn}}
+#server = {{fqdn.stdout}}
 #dns_alt_names = dilopezmaster
 [main]
-server = {{fqdn}}
+server = {{fqdn.stdout}}
 dns_alt_names = dilopezmaster
