--- a/toolkit/docker/docker-compose.yaml
+++ b/toolkit/docker/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
     volumes: 
       - ./jenkins_home:/var/jenkins_home 
       - /var/run/docker.sock:/var/run/docker.sock 
+    environment:
+      - JAVA_ARGS=-Xms256m -Xms256m -XX:MaxDirectMemorySize=256m -Djava.awt.headless=true
     links: 
       - nexus
   nexus: 
@@ -15,3 +17,7 @@ services:
     image: sonatype/nexus3:latest
     ports: 
       - "8081:8081"
+    volumes:
+      - ./nexus-data:/nexus-data
+    environment:
+      - INSTALL4J_ADD_VM_PARAMS=-Xms256m -Xmx256m -XX:MaxDirectMemorySize=256m -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs
